# language-server

./: .env.example  .gitignore  CLAUDE.md  DATA.md  RESEARCH.md  pyproject.toml  resource-websites.md
configs/fdv/: Modelfile.v2  Modelfile.v3  README.md  params.yaml  system_prompt.v2.md  system_prompt.v3.md
data/batepapo-design/: app.jsx  components.jsx  data.js  icons.jsx  index.html  page-inventory.jsx  pages-1.jsx  pages-2.jsx  shell.jsx  styles.css
docs/: mms-asr-recipe.md  training-models-for-low-resource-languages.md
frontend/: package-lock.json  package.json
frontend/src/: index.html  styles.scss
scripts/: _bc_chap.py  _bc_dbg.py  _bc_probe.py  _bc_scan.py  _dbs_probe.py  _pb_debug.py  _pb_form.py  _pb_inspect.py  arclight_bulk.py  arclight_discover.py  arclight_download.py  asr_build_manifest.py  biblecom_download.py  build_training_pairs.py  crawl_unlocked.py  dbp_bulk.py  dbp_download.py  dbp_search.py  dbp_summary.py  dbs_audio_catalog.py  dbs_fetch.py  dbs_parse.py  deploy.sh  eval_mms_asr.py  extract_asr_audio.py  extract_video_audio.py  fdv_build.sh  fdv_eval.sh  mms_probe.py  omlx-warmup.sh  omlx-write.sh  progress_bible_authed.py  progress_bible_fetch.py  readiness_report.py  scrape.py  scriptureearth_kde.py  setup_server.sh  shona_pull.py  smoke_test.py  storyrunners_align.py  (+4 more)
tests/: conftest.py  test_corpus.py  test_readiness.py  test_resources.py  test_routes_langs.py  test_routes_resources.py  test_routes_stt.py  test_routes_tts.py  test_routes_uploads.py  test_spa_fallback.py  test_translate.py  test_ws_transcribe.py
(+64 files in other folders)
