[project]
name = "aiserver"
version = "0.1.0"
description = "TTS/STT pipeline for low-resource Zimbabwean and Mozambican languages"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.5",
    "torchaudio>=2.5",
    "transformers>=4.46",
    "accelerate>=1.1",
    "librosa>=0.10",
    "soundfile>=0.12",
    "numpy>=1.26",
    "scipy>=1.13",
    "huggingface-hub>=0.26",
    "datasets>=3.0",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "python-multipart>=0.0.12",
    "pydantic>=2.9",
    "rich>=13.9",
    "typer>=0.13",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "tqdm>=4.66",
    "websockets>=13",
    "sentencepiece>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "ipython>=8.29",
]
ft = [
    "peft>=0.13",
    "bitsandbytes>=0.44",
    "evaluate>=0.4",
    "jiwer>=3.0",
    "tensorboard>=2.18",
]

[project.scripts]
aisrv = "aiserver.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aiserver"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]
